feat: gvm trunk continued, part 3
TBD